# Custom_GRN_Inference

./: .gitignore  LICENSE  README.md  environment.yml  find_tf_motifs.sh  holdout_scaling_factors.json  my_env.yml  parse_peak_motifs.py  plot_tf_dist.py  pyproject.toml  setup.py
config/: settings.py
dev/: agg_data.py  auroc_testing.py  auroc_testing_11_21_25.ipynb  classifier_testing.py  config.json  data_preprocessing_simple.py  full_pipeline.py  generate_batch_grad_attrib_and_tf_ko.py  grad_attrib.py  hyperparameter_tuning.py  hyperparameter_tuning_new_pipeline.py  join_chrom_inferred_grns.ipynb  muon_preprocessing.py  plotting.py  process_raw_cell_ranger_peaks.sh  run_agg_data.sh  run_all_multi_experiment_plotting.py  run_auroc_testing.sh  run_classifier_training.sh  run_full_pipeline.sh  run_generate_batch_grad_attrib_and_tf_ko.sh  run_grad_attrib.sh  run_hyperparameter_tuning.sh  run_model_plotting.sh  run_muon_preprocessing.sh  run_scalability_full_pipeline.sh  run_stability_full_pipeline.sh  run_tf_ablation.sh  run_tf_ablation_multigpu.sh  run_tf_binding_model_pipeline.sh  scalability_pipeline.py  test_muon_class.ipynb  tf_ablation.py  tf_ablation_multigpu.py  tf_binding_model_pipeline.py  train_classifier.py  visualize_model.ipynb  wandb_train.py
dev/Homer/: homer.ipynb  homer_tf_peak_motifs.py  run_homer_on_chipseq.sh
dev/notebooks/: K562_muon_multiomic_preprocessing.ipynb  Step_010.data_preprocessing_tutorial.ipynb  analyze_scalability.ipynb  (+89 more)
tests/: test_create_homer_peak_file.py
yasin_motif_binding_code/: Calculate_Sequence_TF_Binding_Score.py  calculate_single_tf_to_peak_binding.py  motif_calculations.py  pwm2meme.R  sliding_window_testing.py  sliding_window_tf_binding.py  step_3_1_meme2ppm.pl  step_3_2_ppm2pwm.pl  step_3_3_pwm_wo_letter.pl  step_3_compute_pwm_matrices.sh  step_4_generate_sequence_TF_binding_score_jobs.pl  tf_to_tg_score.py
(+3021 files in other folders)
